# questdb-rest

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
data/: qdb-cli-short-tour  table_schemas.sql
questdb_rest/: __init__.py  cli.py  endpoints.py  mcp_server.py  qdb_canned_queries_pypika.py  qdb_dukascopy_instruments_search.py  qdb_gen_random_data.py  qdb_tv_symbols_search.py  questdb_table_names_pypika.py  utils.py
scripts/: drop_tables.sh  qdb-canned-queries  qdb-canned-queries-fzf  qdb-cols  qdb-copy-single-col-values-from-query  qdb-drop-tables-by-regex  qdb-get-single-col-values-from-query  qdb-table-names  questdb-drop-tables-by-regex  questdb-imp-from-stdin
