[tool.poetry]
name = "questdb-rest"
version = "2.0.2"
description = "QuestDB REST API Python client library and CLI"
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tddschn/questdb-rest"
repository = "https://github.com/tddschn/questdb-rest"
classifiers = ["Topic :: Utilities"]
keywords = ["questdb", "rest", "api", "wrapper", "client", "http"]
packages = [{ include = "questdb_rest" }]

[tool.poetry.scripts]
qdb-cli = "questdb_rest.cli:main"
questdb-cli = "questdb_rest.cli:main"
qdb-drop-tables-by-regex = { reference = "scripts/qdb-drop-tables-by-regex", type = "file" }
questdb-drop-tables-by-regex = { reference = "scripts/questdb-drop-tables-by-regex", type = "file" }

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/questdb-rest/issues"

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
sqlparse = "^0.5.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
