[tool.poetry]
name = "questdb-rest"
version = "4.4.3"
description = "QuestDB REST API Python client library and CLI"
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tddschn/questdb-rest"
repository = "https://github.com/tddschn/questdb-rest"
classifiers = ["Topic :: Utilities"]
keywords = ["questdb", "rest", "api", "wrapper", "client", "http"]
packages = [{ include = "questdb_rest" }]

[tool.poetry.scripts]
qdb-cli = "questdb_rest.cli:main"
questdb-cli = "questdb_rest.cli:main"
qdb-tables = "questdb_rest.questdb_table_names_pypika:main"
qdb-gen-random-data = "questdb_rest.qdb_gen_random_data:main"
qdb-canned-queries = "questdb_rest.qdb_canned_queries_pypika:main"
qdb-table-names = { reference = "scripts/qdb-table-names", type = "file" }
qdb-cols = { reference = "scripts/qdb-cols", type = "file" }
# qdb-canned-queries = { reference = "scripts/qdb-canned-queries", type = "file" }
qdb-canned-queries-fzf = { reference = "scripts/qdb-canned-queries-fzf", type = "file" }
qdb-drop-tables-by-regex = { reference = "scripts/qdb-drop-tables-by-regex", type = "file" }
# questdb-drop-tables-by-regex = { reference = "scripts/questdb-drop-tables-by-regex", type = "file" }
qdb-imp-from-stdin = { reference = "scripts/qdb-imp-from-stdin", type = "file" }
# questdb-imp-from-stdin = { reference = "scripts/questdb-imp-from-stdin", type = "file" }
qdb-copy-single-col-values-from-query = { reference = "scripts/qdb-copy-single-col-values-from-query", type = "file" }
qdb-get-single-col-values-from-query = { reference = "scripts/qdb-get-single-col-values-from-query", type = "file" }

# for self use only, only works for my dbs
qdbtvs = "questdb_rest.qdb_tv_symbols_search:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/questdb-rest/issues"

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
sqlparse = "^0.5.3"
tabulate = "^0.9.0"
argcomplete = "^3.6.2"
pypika = "^0.48.9"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
